welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:11: error: value avance is not a member of Unit
	gauche();avance();droite();avance(8);gauche()avance();droite();growFlowers();
                                                     ^